# models/Response.js
@@ -1,0 +1,18 @@
+const mongoose = require("mongoose");
+
+const responseSchema = new mongoose.Schema({
+  surveyId: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: "Survey",
+    required: true,
+  },
+  answers: [{ question: String, answer: String }],
+  submittedBy: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: "User",
+    required: true,
+  },
+  submittedAt: { type: Date, default: () => Date.now() },
+});
+
+module.exports = mongoose.model("Response", responseSchema);
