# routes/surveys.js
@@ -6,6 +6,7 @@ const validateRequest = require("../middleware/validateRequest");
 const surveyCtrl = require("../controller/surveys");
 
 router.get("/", surveyCtrl.getAllSurveys);
+router.get("/user/:userId", surveyCtrl.getSurveysByUser);
 router.get("/:id", surveyCtrl.getSurveyById);
 router.post("/", surveyRules, validateRequest, surveyCtrl.createSurvey);
 router.put("/:id", updateSurveyRules, validateRequest, surveyCtrl.updateSurvey);
